--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -22,7 +22,7 @@
 
 <div class= "container">
 <div class="Top"> 
-	<img src="images/taylor.webp" alt= "Red Era" title= "Red Era" class="imagestyle" height= auto width= 800px align=center>
+	<img src="images/taylor.jpg" alt= "Red Era" title= "Red Era" class="imagestyle" height= auto width= 800px align=center>
 	<br>
 	<h7>Taylor Swift performing the "Red" era portion at The Eras Tour. Image courtesy of GQ.</h7> <!--This is a caption-->
 </div>
